<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="action_preferences">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="share_activity_title">Share Image</string>
    <string name="image_title_label">Image Title</string>
    <string name="image_view_content_description">Image Result</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="image_size">Image Size</string>
    <string name="advanced_search_options">Advanced search options</string>
    <string name="image_size_prompt">Select Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="color_filter_prompt">Select Color</string>
    <string name="image_type_filter">Image Filter</string>
    <string name="image_type_prompt">Select Image Type</string>
    <string name="site_filter">Site filter</string>
    <string name="site_filter_hint">Enter site URL</string>
    <string name="save_button">Save</string>

</resources>
