<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.gridimagesearch.activities.AdvancedFiltersActivity">

    <TextView
        android:id="@+id/tvAdvancedFilterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/advanced_search_options"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvAdvancedFilterTitle"
        android:padding="10dp"
        android:text="@string/image_size"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spImageSizeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvImageSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tvImageSize"
        android:layout_toEndOf="@id/tvImageSize"
        android:layout_toRightOf="@id/tvImageSize"
        android:entries="@array/image_sizes"
        android:padding="10dp"
        android:prompt="@string/image_size_prompt" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvImageSize"
        android:padding="10dp"
        android:text="@string/color_filter"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvColorFilter"
        android:layout_toEndOf="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:entries="@array/color_filters"
        android:padding="10dp"
        android:prompt="@string/color_filter_prompt" />

    <TextView
        android:id="@+id/tvImageTypeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvColorFilter"
        android:padding="10dp"
        android:text="@string/image_type_filter"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spImageTypeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageTypeFilter"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvImageTypeFilter"
        android:layout_toEndOf="@+id/tvImageTypeFilter"
        android:layout_toRightOf="@+id/tvImageTypeFilter"
        android:entries="@array/image_types"
        android:padding="10dp"
        android:prompt="@string/image_type_prompt" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvImageTypeFilter"
        android:padding="10dp"
        android:text="@string/site_filter"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvSiteFilter"
        android:layout_toEndOf="@+id/tvSiteFilter"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:entries="@array/image_types"
        android:hint="@string/site_filter_hint"
        android:padding="10dp"
        android:prompt="@string/image_type_prompt" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSiteFilter"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmit"
        android:text="@string/save_button" />

</RelativeLayout>
